Update documentation to pass Vale prose linter
- Use contractions consistently per Microsoft style guide
- Replace 'e.g.' with 'for example' per Google style guide
- Add Vale to environment checklist in ch01.md
- Reformat markdown with text wrapper for better readability
- Fix various grammar and style issues flagged by Vale

--- a/docs/ch01.md
+++ b/docs/ch01.md
@@ -1,11 +1,17 @@
 # Chapter 1: Setting Up Your Environment
 
-This chapter is a lightweight checklist for getting the toolchain ready before diving into the examples.
+This chapter is a lightweight checklist for getting the toolchain ready before diving
+into the examples.
 
 ## Environment Checklist
 
 * Install Go (matching the version used in the book) and verify with `go version`.
-* Configure your editor or IDE with Go tooling so that `gofmt`, `goimports`, and linting run automatically.
-* Clone this repository, run `make list`, and execute one of the example targets to confirm everything is wired up.
+* Configure your editor or IDE with Go tooling so that `gofmt`, `goimports`, and
+  linting run automatically.
+* Install Vale for prose linting of documentation files and verify with `vale
+  --version`.
+* Clone this repository, run `make list`, and execute one of the example targets to
+  confirm everything is wired up.
 
-Once your environment passes the smoke test you can move straight into the predeclared types material in Chapter 2.
+Once your environment passes the smoke test you can move straight into the
+predeclared types material in Chapter 2.
