--- a/docs/ch02.md
+++ b/docs/ch02.md
@@ -1,10 +1,12 @@
 # Chapter 2: Predeclared Types and Declarations
 
-Go defines predeclared types for booleans, numbers, strings, and a few built-in interfaces like `error`, `any`, and `comparable`.
+Go defines predeclared types for booleans, numbers, strings, and a few built-in
+interfaces like `error`, `any`, and `comparable`.
 
 ## Zero Value
 
-The "zero value" is the default value given to any variable that is declared but not assigned. Zero values for each type are:
+The "zero value" is the default value given to any variable that's declared but not
+assigned. Zero values for each type are:
 
 - `bool`: `false`
 - Numeric types default to `0`; complex numbers use `0+0i`
@@ -18,12 +20,14 @@ The "zero value" is the default value given to any variable that is declared but
 Types of literals:
 
 - numeric: integers, floats, runes (single Unicode code points), and complex numbers
-- string: interpreted (delimited with double quotes) and raw (delimited with backticks)
+- string: interpreted (delimited with double quotes) and raw (delimited with
+  backticks)
 - boolean: `true` & `false`
 - composite: arrays, slices, structs, maps, and interfaces
 - function: `func(x int) int { return x * x }`
 
-Interpreted string literals can not include unescaped backslashes, unescaped newlines, or unescaped double quotes.
+Interpreted string literals can not include unescaped backslashes, unescaped
+newlines, or unescaped double quotes.
 
 ## Types
 
@@ -31,7 +35,8 @@ The types supported by Go are:
 
 - Boolean: `bool`, zero value: false,
 - Numeric
-  - Integers: `int8`, `int16`, `int32`, `int64`, `uint8`, `uint16`, `uint32`, `uint64`, `byte` is an alias for `uint8`. `rune` is an alias for `int32`
+  - Integers: `int8`, `int16`, `int32`, `int64`, `uint8`, `uint16`, `uint32`,
+    `uint64`, `byte` is an alias for `uint8`. `rune` is an alias for `int32`
   - Platform specific integers: `int`, `uint`, and `uintptr`
   - Floats: `float32`, `float64`
   - Complex: `complex64`, `complex128`
@@ -42,11 +47,14 @@ The types supported by Go are:
 
 Strings in Go are immutable.
 
-In Go, you must use explicit type conversion when variable types do not match, including when only their numeric widths differ (e.g. assigning an int32 to an int64 requires explicit type conversion).
+In Go, you must use explicit type conversion when variable types don't match,
+including when only their numeric widths differ (for example, assigning an int32 to
+an int64 requires explicit type conversion).
 
 Literals are untyped.
 
-For instance, boolean literals are untyped but only resolve to bool, whereas numeric literals can become any compatible numeric type.
+For instance, boolean literals are untyped but only resolve to bool, whereas numeric
+literals can become any compatible numeric type.
 
 ## Variables
 
@@ -56,7 +64,8 @@ For instance, boolean literals are untyped but only resolve to bool, whereas num
 var x int = 10
 ```
 
-Omitting the type means the variable gets the literal's default type (`x` is of type `int`):
+Omitting the type means the variable gets the literal's default type (`x` is of type
+`int`):
 
 ```go
 var x = 10
@@ -68,7 +77,10 @@ Omitting the value means to use the zero value (`name` is an empty string):
 var name string
 ```
 
-Declare multiple variables (of the same type) at once. If the explicit type (`int`) is left off, the type of each variable is inferred by each value. In this form, you can only specify a single explicit type and it applies to all the variables being declared.
+Declare multiple variables (of the same type) at once. If the explicit type (`int`)
+is left off, the type of each variable is inferred by each value. In this form, you
+can only specify a single explicit type and it applies to all the variables being
+declared.
 
 ```go
 var x, y int = 10, 20
@@ -91,7 +103,8 @@ var (
 
 ### Declaring with `:=`
 
-Within a function, `:=` is a shorthand version of `var` that lets you declare and initialize variables with type inference.
+Within a function, `:=` is a shorthand version of `var` that lets you declare and
+initialize variables with type inference.
 
 Declaring a single variable:
 
@@ -107,20 +120,26 @@ var name, age = "James", 58 // Using var
 name, age := "James", 58 // Equivalent using :=
 ```
 
-You should only declare multiple variables on the same line when assigning multiple values returned from a function or the comma ok idiom.
+You should only declare multiple variables on the same line when assigning multiple
+values returned from a function or the comma ok idiom.
 
 ## Constants
 
-`const` is a way to declare a value as immutable. It is used just like `var`.
+`const` is a way to declare a value as immutable. It's used just like `var`.
 
-Constants give names to literals. They can only hold values that the compiler can figure out at compile time. Go does not provide a way to specify that a value calculated at runtime is immutable.
+Constants give names to literals. They can only hold values that the compiler can
+figure out at compile time. Go doesn't provide a way to specify that a value
+calculated at runtime is immutable.
 
-There are no immutable arrays, slices, maps, or structs and no way to declare that a field in a struct is immutable.
+There are no immutable arrays, slices, maps, or structs and no way to declare that a
+field in a struct is immutable.
 
 Constants can be typed or untyped. An untyped constant works exactly like a literal.
 
 ## Naming Variables and Constants
 
-Variable and constant names must start with an underscore or letter and can contain underscores, letters, and digits. Here, letter and digit means any Unicode character that is considered a letter or digit.
+Variable and constant names must start with an underscore or letter and can contain
+underscores, letters, and digits. Here, letter and digit means any Unicode character
+that's considered a letter or digit.
 
 Idiomatic Go uses camel case for both variable and constant names.
