--- a/docs/ch03.md
+++ b/docs/ch03.md
@@ -2,7 +2,8 @@
 
 ## Arrays
 
-Arrays are rarely used directly in Go. They have many limitations. Unless you know the exact length you need ahead of time, use slices instead.
+Arrays are rarely used directly in Go. They have many limitations. Unless you know
+the exact length you need ahead of time, use slices instead.
 
 Ways to declare an array:
 
@@ -17,9 +18,12 @@ var x [12]int{1, 5: 4, 6, 10: 100, 15} // unspecified elements are initialized t
 var x [...]int{10, 20, 30}
 ```
 
-Arrays can be compared with `==` and `!=`. Arrays are equal if they are the same length and contain the same values in the same order.
+Arrays can be compared with `==` and `!=`. Arrays are equal if they're the same
+length and contain the same values in the same order.
 
-You can declare multidimensional arrays by stacking dimensions. The following statement declares an array of length 2 whose element type is an array of ints of length 3:
+You can declare multidimensional arrays by stacking dimensions. The following
+statement declares an array of length 2 whose element type is an array of ints of
+length 3:
 
 ```go
 var x [2][3]int
@@ -29,17 +33,19 @@ Reading past the end of an array or using a negative index causes a panic.
 
 The built-in function `len` takes in an array and returns its length.
 
-Since an array's *length* is part of its type and all types must be known at compile time, you cannot use a variable to specify the size of an array.
+Since an array's *length* is part of its type and all types must be known at compile
+time, you can't use a variable to specify the size of an array.
 
-This also means that you can't write a function that works with arrays of any size and you can't assign arrays of different sizes to the same variable.
+This also means that you can't write a function that works with arrays of any size
+and you can't assign arrays of different sizes to the same variable.
 
 ## Slices
 
 A slice is a data structure that holds a sequence of values that can grow as needed.
 
-The length of a slice is not part of its type.
+The length of a slice isn't part of its type.
 
-When declaring a slice, you do not specify the size of the slice:
+When declaring a slice, you don't specify the size of the slice:
 
 ```go
 // a slice initialially containing 3 integers
@@ -48,24 +54,29 @@ var x = []int{10, 20, 30}
 var x [][]int
 ```
 
-When declaring a slice, you want to minimize the number of times the slice needs to grow.
+When declaring a slice, you want to minimize the number of times the slice needs to
+grow.
 
-If it isn't expected to grow at all, use a `var` declaration with no assigned value to create a `nil` slice:
+If it isn't expected to grow at all, use a `var` declaration with no assigned value
+to create a `nil` slice:
 
 ```go
 var data []int
 ```
 
-If you have some starting values or if a slice's values aren't going to change, then use a slice literal:
+If you have some starting values or if a slice's values aren't going to change, then
+use a slice literal:
 
 ```go
 data := []string{"first", "second", "third"}
 ```
 
-If you have a good idea of how large your slice needs to be, but don't know what those values will be when you are writing the program, use `make`.
+If you have a good idea of how large your slice needs to be, but don't know what
+those values will be when you are writing the program, use `make`.
 
 - If you are using a slice as a buffer, then specify a non-zero length
-- If you are sure you know the exact size you want, you can specify the length and index into the slice to set the values
+- If you are sure you know the exact size you want, you can specify the length and
+  index into the slice to set the values
 - In other situations, use `make` with a zero length and a specified capacity
 
 ```go
@@ -75,7 +86,8 @@ data := make([]string, length, capacity)
 fmt.Println(data) // [          ]
 ```
 
-You read and write slices using bracket syntax just like arrays. Reading past the end of the slice or with a negative index causes a panic.
+You read and write slices using bracket syntax just like arrays. Reading past the end
+of the slice or with a negative index causes a panic.
 
 ```go
 x[0] = 10
@@ -84,13 +96,16 @@ fmt.Println(x[0])
 
 The zero value for a slice is `nil`. A `nil` slice contains nothing.
 
-You cannot use `==` or `!=` to compare slices. Use `slices.Equal` or `slices.EqualFunc` instead.
+You can't use `==` or `!=` to compare slices. Use `slices.Equal` or
+`slices.EqualFunc` instead.
 
 ### `len` (slices)
 
-The built-in function `len` takes a slice or array and returns its length. When given `nil`, it returns `0`.
+The built-in function `len` takes a slice or array and returns its length. When given
+`nil`, it returns `0`.
 
-`len` on an array is compile-time constant (the length of the array) while on a slice it's computed at runtime.
+`len` on an array is compile-time constant (the length of the array) while on a slice
+it's computed at runtime.
 
 ### `append`
 
@@ -115,13 +130,15 @@ fmt.Println(x) // Output: [1 2 3 4 5 6]
 
 ### `cap`
 
-The built-in function `cap` returns the current capacity of a slice. This is the size a slice can grow to without having to reallocate the slice.
+The built-in function `cap` returns the current capacity of a slice. This is the size
+a slice can grow to without having to reallocate the slice.
 
 When `cap` is given an array, it returns the length of the array.
 
 ### `make`
 
-The built-in function `make` allows you to specify the type, length, and capacity of a slice:
+The built-in function `make` allows you to specify the type, length, and capacity of
+a slice:
 
 ```go
 // A slice with 5 elements each with the zero value
@@ -133,7 +150,8 @@ x = append(x, 1, 2, 3, 4) // slice would have length of 4
 
 ### `clear` (slices)
 
-The built-in function `clear` sets all of the slice's elements to their zero value. The length of the slice remains unchanged:
+The built-in function `clear` sets all of the slice's elements to their zero value.
+The length of the slice remains unchanged:
 
 ```go
 s := []string{"first", "second", "third"}
@@ -146,7 +164,10 @@ fmt.Println(s, len(s))
 
 A slice expression creates a slice from a slice or an array.
 
-A slice expression is a expression after an array or slice name enclosed in brackets: `x[start:end]`. `start` is the position in `x` to start the slice. If omitted it defaults to `0`. `end` is one past the last position to include. `start` and `end` must be integers.
+A slice expression is a expression after an array or slice name enclosed in brackets:
+`x[start:end]`. `start` is the position in `x` to start the slice. If omitted it
+defaults to `0`. `end` is one past the last position to include. `start` and `end`
+must be integers.
 
 Examples:
 
@@ -158,7 +179,9 @@ fmt.Println("x[1:3]:", x[1:3]) // Output: ["second", "third"]
 fmt.Println("x[:]:", x[:]) // Output: ["first", "second", "third", "forth"]
 ```
 
-When you make a slice from a slice, you are not making a copy. Instead, you now have two variables that are sharing memory. Changes to an element in a slice affect all slices that share that element.
+When you make a slice from a slice, you aren't making a copy. Instead, you now have
+two variables that are sharing memory. Changes to an element in a slice affect all
+slices that share that element.
 
 ```go
 x := []string{"first", "second", "third", "forth"}
@@ -169,7 +192,9 @@ fmt.Println("x:", x) // Output: ["first", "2nd", "3rd", "forth"]
 fmt.Println("y:", y) // Output: ["2nd", "3rd"]
 ```
 
-Avoid modifying slices after they have been sliced or if they were produced by slicing. Use a three-part slice expression (aka full slice expression) to prevent append from sharing capacity between slices.
+Avoid modifying slices after they have been sliced or if they were produced by
+slicing. Use a three-part slice expression (aka full slice expression) to prevent
+append from sharing capacity between slices.
 
 ```go
 x := []string{"first", "second", "third", "forth"}
@@ -181,7 +206,8 @@ fmt.Println("y:", y) // Output: ["second", "third", "4th"]
 
 ### `copy`
 
-The built-in function `copy` creates a slice that is independent of the original slice.
+The built-in function `copy` creates a slice that's independent of the original
+slice.
 
 ```go
 x := []string{"first", "second", "third", "forth"}
@@ -193,9 +219,12 @@ fmt.Println("x:", x) // Output: ["first", "second", "3rd", "forth"]
 fmt.Println("y:", y) // Output: ["2nd", "third"]
 ```
 
-Copy copies as many values as it can from the source to destination, limited by whichever slice length is smaller. The number of elements copied is returned. The capacity of either slice does not matter.
+Copy copies as many values as it can from the source to destination, limited by
+whichever slice length is smaller. The number of elements copied is returned. The
+capacity of either slice doesn't matter.
 
-You can copy between two slices that cover overlapping sections of an underlying slice:
+You can copy between two slices that cover overlapping sections of an underlying
+slice:
 
 ```go
 x := []string{"first", "second", "third", "forth"}
@@ -221,14 +250,16 @@ y := [4]string(x) // ["first", "second", "third", "forth"]
 
 The size of the array must be known at compile time.
 
-The size of the array may be smaller than the length of the slice. In this case, the array will contain only the given number of elements from the slice.
+The size of the array may be smaller than the length of the slice. In this case, the
+array will contain only the given number of elements from the slice.
 
 ```go
 x := []string{"first", "second", "third", "forth"}
 z := [2]string(x) // ["first", "second"]
 ```
 
-A runtime panic will occur if the size of the array is larger than the length of the slice.
+A runtime panic will occur if the size of the array is larger than the length of the
+slice.
 
 ```go
 x := []string{"first", "second", "third", "forth"}
@@ -237,9 +268,11 @@ y := [5]string(x) // Panics
 
 ## Strings
 
-In Go, a string is implemented as a series of bytes instead of a series of UTF-8 code points.
+In Go, a string is implemented as a series of bytes instead of a series of UTF-8 code
+points.
 
-This means that using `len`, index expressions and slice expressions can be problematic when the string contains multi-byte code points.
+This means that using `len`, index expressions and slice expressions can be
+problematic when the string contains multi-byte code points.
 
 Converting an int to a string treats the int like a UTF-8 code point.
 
@@ -259,7 +292,9 @@ fmt.Println(bs) // Output: [72 101 108 108 111 44 32 240 159 140 158]
 fmt.Println(rs) // Output: [72 101 108 108 111 44 32 127774]
 ```
 
-Rather than use the slice and index expressions with strings, you should extract substrings and code points from strings using the functions in the `strings` and `unicode/utf8` packages in the standard library.
+Rather than use the slice and index expressions with strings, you should extract
+substrings and code points from strings using the functions in the `strings` and
+`unicode/utf8` packages in the standard library.
 
 ## Maps
 
@@ -267,7 +302,9 @@ A map is a hash map implemented as a hash table under the hood.
 
 The map type is written: `map[keyType]valueType`
 
-The zero value for a map is `nil`. A `nil` map has a length of `0`. Attempting to read a `nil` map always returns the zero value for the map's value type. However, attempting to write to a `nil` map variable causes a panic.
+The zero value for a map is `nil`. A `nil` map has a length of `0`. Attempting to
+read a `nil` map always returns the zero value for the map's value type. However,
+attempting to write to a `nil` map variable causes a panic.
 
 Here are a few ways to declare maps:
 
@@ -287,17 +324,20 @@ fmt.Println(map2) // Output: map[]
 fmt.Println(map3) // Output: map[beatles:[george john paul ringo] stones:[mick keith bryan bill charlie]]
 ```
 
-If you know how many key-value pairs you plan to insert into a map, you can use make to create a map with a specific initial size:
+If you know how many key-value pairs you plan to insert into a map, you can use make
+to create a map with a specific initial size:
 
 ```go
 ages := make(map[int][]string, 10)
 ```
 
-Maps created with `make` still have a length of `0`, and they can grow past the initially specified size.
+Maps created with `make` still have a length of `0`, and they can grow past the
+initially specified size.
 
 Maps automatically grow as you add key-value pairs to them.
 
-Maps are not comparable. You can check if they are equal to nil, but you cannot check if two maps have identical keys and values using == or differ using !=.
+Maps aren't comparable. You can check if they're equal to nil, but you can't check if
+two maps have identical keys and values using == or differ using !=.
 
 ### `len` (maps)
 
@@ -310,7 +350,9 @@ fmt.Println(len(myMap)) // Output: 2
 
 ### Reading and Writing
 
-Assign a value to a map key by putting the name within brackets and using = to specify the value. Read the value assigned to a map key by putting the key within brackets.
+Assign a value to a map key by putting the name within brackets and using = to
+specify the value. Read the value assigned to a map key by putting the key within
+brackets.
 
 ```go
 ages := map[string]int{}
@@ -320,7 +362,8 @@ fmt.Println("John's age:", ages["John"]) // Output: John's age: 58
 fmt.Println("Mary's age:", ages["Mary"]) // Output: Mary's age: 32
 ```
 
-Reading the value of a key that isn't in the map will return the zero value for the map's value type. You can tell if the key exists using "the comma ok idiom."
+Reading the value of a key that isn't in the map will return the zero value for the
+map's value type. You can tell if the key exists using "the comma ok idiom."
 
 ```go
 ages := map[string]int{}
@@ -341,7 +384,8 @@ delete(m, "Mary")
 fmt.Println(m) // Output: map[James:58]
 ```
 
-If the key isn't present in the map or if the map is `nil`, nothing happens. The `delete` function does not return a value.
+If the key isn't present in the map or if the map is `nil`, nothing happens. The
+`delete` function doesn't return a value.
 
 ### `clear` (maps)
 
@@ -356,7 +400,8 @@ fmt.Println(m, len(m)) // Output: map[] 0
 
 ### Comparing Maps
 
-Use `maps.Equal` or `maps.EqualFunc` see if two different maps contain the same key-value pairs:
+Use `maps.Equal` or `maps.EqualFunc` see if two different maps contain the same
+key-value pairs:
 
 ```go
 m1 := map[string]int{"James": 58, "Mary": 32}
@@ -368,13 +413,20 @@ fmt.Println("maps.Equal(m1, m3):", maps.Equal(m1, m3)) // false
 
 ### Maps as Sets
 
-Go doesn't include a set type, but you can use a map to simulate some of its features. Store the set value type in the key of the `map` and store a `bool` for the value.
+Go doesn't include a set type, but you can use a map to simulate some of its
+features. Store the set value type in the key of the `map` and store a `bool` for the
+value.
 
 ## Structs
 
-In Go, a `struct` is a composite type that groups together zero or more named fields, each with its own type, into a single unit. It's the language's way to define custom data records: `type Person struct { Name string; Age int }`. Instances can then hold related values under one variable, with fields accessed via dot notation.
+In Go, a `struct` is a composite type that groups together zero or more named fields,
+each with its own type, into a single unit. It's the language's way to define custom
+data records: `type Person struct { Name string; Age int }`. Instances can then hold
+related values under one variable, with fields accessed via dot notation.
 
-A struct definition uses the `type` keyword, a name, the `struct` keyword, and braces containing the fields. Inside the braces, list each field on its own line as `FieldName FieldType`.
+A struct definition uses the `type` keyword, a name, the `struct` keyword, and braces
+containing the fields. Inside the braces, list each field on its own line as
+`FieldName FieldType`.
 
 ```go
 type person struct {
@@ -392,7 +444,8 @@ Once a struct is declared, you can declare variables of that type:
 var fred person
 ```
 
-Struct variables with no value assigned gets the zero value for the struct type. A zero value struct has every field set to the field's zero value.
+Struct variables with no value assigned gets the zero value for the struct type. A
+zero value struct has every field set to the field's zero value.
 
 A struct literal can be assigned to a variable as well:
 
@@ -400,7 +453,8 @@ A struct literal can be assigned to a variable as well:
 bob := person{}
 ```
 
-Field values can be given in a struct literal as a comma delimited list of fields or in map literal style:
+Field values can be given in a struct literal as a comma delimited list of fields or
+in map literal style:
 
 ```go
 type person struct {
@@ -411,9 +465,13 @@ james := person{"James", 58}
 bob := person{name: "Bob", age: 32}
 ```
 
-When giving values using the comma delimited list format, a value for every field in the struct must be given in the order they were declared in the struct definition.
+When giving values using the comma delimited list format, a value for every field in
+the struct must be given in the order they were declared in the struct definition.
 
-When using the keyed (map-style) struct literal, specify each field as `FieldName: value`. You may list fields in any order and omit ones you want left at their zero value. A multi-line struct literal must end every line, even the last field, with a trailing comma.
+When using the keyed (map-style) struct literal, specify each field as `FieldName:
+value`. You may list fields in any order and omit ones you want left at their zero
+value. A multi-line struct literal must end every line, even the last field, with a
+trailing comma.
 
 A field in a struct is accessible with dot notation:
 
@@ -429,7 +487,9 @@ fmt.Println("Age: ", james.age)   // Output: Age: 58
 
 ### Anonymous Structs
 
-You can declare that a variable implements a struct type without first giving the struct type a name. The type is unique to that declaration and can't be reused elsewhere.
+You can declare that a variable implements a struct type without first giving the
+struct type a name. The type is unique to that declaration and can't be reused
+elsewhere.
 
 ```go
 var person struct {
@@ -459,13 +519,18 @@ fmt.Println(person)
 
 ### Comparing and Converting Structs
 
-Structs that are entirely composed of comparable types are comparable. Those with slice, map, function, and channel fields are not.
+Structs that are entirely composed of comparable types are comparable. Those with
+slice, map, function, and channel fields aren't.
 
 You can't compare structs of different types.
 
-Go allows type conversion of one struct type to another if the fields of both structs have the same names, order, and types.
+Go allows type conversion of one struct type to another if the fields of both structs
+have the same names, order, and types.
 
-Two different types of anonymous structs can be compared without a type conversion if the fields of both structs have the same names, order, and type. You can also assign between named and anonymous struct types if the fields of both structs have same names, order, and types.
+Two different types of anonymous structs can be compared without a type conversion if
+the fields of both structs have the same names, order, and type. You can also assign
+between named and anonymous struct types if the fields of both structs have same
+names, order, and types.
 
 ```go
 type firstPerson struct {
