docs: add .md extension to cross-chapter links
Fix MkDocs warnings about unrecognized relative links by adding .md
extension to all cross-chapter references.

--- a/docs/ch04.md
+++ b/docs/ch04.md
@@ -417,7 +417,7 @@ Lining up the conditions improves the layout and makes the code easier to unders
 The `for-range` loop iterates over elements in some of Go's built-in types such as
 strings, arrays, slices, maps, and channels. This section will cover all but channels
 which will be described in [Chapter 12: Concurrency in Go > Using for-range and
-Channels](ch12#using-for-range-and-channels).
+Channels](ch12.md#using-for-range-and-channels).
 
 Starting in Go 1.23, you can define custom iterators for user-defined types using the
 `iter.Seq[V]` or `iter.Seq2[K, V]`.
@@ -663,7 +663,7 @@ For example, servers, event loops, retry logic with timeout.
 
 This section covers *expression switch* and *blank switch* statements. *type switch*
 statements are covered in [Chapter 7: Types, Methods, and Interfaces > Type
-Assertions and Type Switches](ch07#type-assertions-and-type-switches).
+Assertions and Type Switches](ch07.md#type-assertions-and-type-switches).
 
 Here is an example `switch` statement:
 
@@ -815,6 +815,6 @@ CLEANUP:
 ```
 
 This pattern is less common in modern Go since `defer` handles cleanup more
-elegantly. `defer` is described in [Chapter 5: Functions > defer](ch05#defer). Using
+elegantly. `defer` is described in [Chapter 5: Functions > defer](ch05.md#defer). Using
 `goto` to break out of nested loops is also discouraged since labeled `break`
 accomplishes the same thing more clearly.
