--- a/docs/ch05.md
+++ b/docs/ch05.md
@@ -389,7 +389,7 @@ func main() {
 Declaring anonymous functions without assigning them to variables is useful in two situations:
 
 1. `defer` statements (covered in the [defer section](#defer))
-2. launching goroutines (covered in [Chapter 12: Concurrency in Go > Goroutines](ch12#goroutines))
+2. launching goroutines (covered in [Chapter 12: Concurrency in Go > Goroutines](ch12.md#goroutines))
 
 ## Closures
 
